--- a/Coralie-EvaluationJS/index.html
+++ b/Coralie-EvaluationJS/index.html
@@ -30,16 +30,16 @@
         <h2>Location de voiture 24h/24 et 7j/7</h2>
         <form action="rent" method="get" id="form-location"> <!--TODO mettre les calendriers à cliquer, et faire en sorte que le texte initial s'efface lorsqu'on clique sur l'input-->
             <div class="form__input">
-              <input value="Adresse de départ">
+              <input placeholder="Adresse de départ">
             </div>
             <div class="form__input">
-              <input value="Début de Location">
+              <input placeholder="Début de Location">
             </div>
             <div class="form__input">
-                <input name="date" value="Fin de location">
+                <input name="date" placeholder="Fin de location">
             </div>
             <div>
-              <input type="submit" value="Valider ma recherche" id="valider">
+              <input type="submit" placeholder="Valider ma recherche" id="valider">
             </div>
           </form>
     </header>
